add(rust LP): predefined service

--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -166,6 +166,7 @@ og:
   {{ logoList(logoCompanies) }}
 </section>
 
+{% set predefinedService = "Rust" %}
 {% include 'contact-form-LP.njk' %}
 
 <section class="container container--lg opensource-list py-7 image-max-width-32" id="open-source">
