update(contact form fields): in line with /contact

--- a/src/components/contact-form-LP.njk
+++ b/src/components/contact-form-LP.njk
@@ -44,7 +44,7 @@
               id="contact-company-name"
               type="text"
               name="company"
-              placeholder="Company"
+              placeholder="Company name"
             />
             <label class="contact-form__label h4" for="contact-company-name"> Company name </label>
           </div>
@@ -62,6 +62,19 @@
               <span class="screenreader">(Required)</span>
             </label>
             <span class="contact-form__label-required" aria-hidden="true">Required</span>
+          </div>
+          <div class="contact-form__field">
+            <input
+              class="contact-form__input"
+              id="contact-referral-source"
+              type="text"
+              name="referral_source"
+              placeholder="How did you find us?"
+              required
+            />
+            <label class="contact-form__label h4" for="contact-referral-source">
+              How did you find us?
+            </label>
           </div>
           <div class="contact-form__field">
             <textarea
