--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -167,7 +167,7 @@ og:
   {{ logoList(logoCompanies) }}
 </section>
 
-{{ contactFormLP(Rust) }}
+{{ contactFormLP('Rust') }}
 
 <section class="container container--lg opensource-list py-7 image-max-width-32" id="open-source">
   <div class="">
