add(predefinedService condition)

--- a/src/components/contact-form-LP.njk
+++ b/src/components/contact-form-LP.njk
@@ -21,7 +21,9 @@
           data-goal="Contact"
         >
           <fieldset data-form-content tabindex="-1" disabled>
-            <input type="hidden" name="service" id="service" value="{{ predefinedService }}" />
+            {% if predefinedService %}
+              <input type="hidden" name="service" id="service" value="{{ predefinedService }}" />
+            {% endif %}
             <div class="contact-form__field">
               <input
                 class="contact-form__input"
