--- a/src/components/contact-form-LP.njk
+++ b/src/components/contact-form-LP.njk
@@ -47,7 +47,9 @@
                 name="company"
                 placeholder="Company name"
               />
-              <label class="contact-form__label h4" for="contact-company-name"> Company name </label>
+              <label class="contact-form__label h4" for="contact-company-name">
+                Company name
+              </label>
             </div>
             <div class="contact-form__field">
               <input
